# chatur_bot

./: .env  README.md  config.py  hackathon_ppt_content.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
backend/: __init__.py  action_executor.py  auth.py  context_builder.py  decision_engine.py  intent_router.py  learning.py  llm_service.py  models.py  page_index.py  pipeline.py  settings.py  store.py
frontend/: app.js  index.html  login.html  rag_test_doc.txt  style.css
services/: __init__.py  action_executor.py  context_builder.py  decision_engine.py  intent_router.py  learning_system.py  llm_service.py
voice/: __init__.py  speech_formatter.py  stt.py  tts.py
